apps/open-webui/searxng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - port: 8080
      targetPort: 8080
      name: http
