apps/open-webui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: nori-cloud
  labels:
    app: open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.norriswu.me`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
